# agrorob-can-bridge

./: CMakeLists.txt  README.md  package.xml
docs/: .~lock.Robot_sterowanie_CAN_1.3-EN.docx#  .~lock.Robot_sterowanie_CAN_1.3-EN.odt#  Robot_sterowanie_CAN_1.3-EN.docx  Robot_sterowanie_CAN_1.3-EN.odt  Robot_sterowanie_CAN_1.3-PL.docx
docs/CAN-agrorob/rosbag2_2022_10_25-15_03_08/: metadata.yaml  rosbag2_2022_10_25-15_03_08_0.db3
include/agrorob_driver/: CMakeLists.txt  agrorob_interface.hpp  digital_filters.hpp  velocity_controller.hpp
include/agrorob_interfaces/: mode_manager.hpp
src/: agrorob_interface.cpp  can-bridge.cpp  can_bridge.cpp  main.cpp
